--- a/style/main.css
+++ b/style/main.css
@@ -82,11 +82,17 @@
 }
 /* Animation Times - Time for image to fade in
 ---------------------------------------------------- */
-.fadeIn-1s {
+.fadeIn-100ms {
         -webkit-animation-duration:1s;
         -moz-animation-duration:1s;
         -o-animation-duration:1s;
         animation-duration:1s;
+}
+.fadeIn-150ms {
+        -webkit-animation-duration:1.5s;
+        -moz-animation-duration:1.5s;
+        -o-animation-duration:1.5s;
+        animation-duration:1.5s;
 }
 /* Animation Delay - Time for image to be delayed
 ---------------------------------------------------- */
@@ -117,40 +123,88 @@
 
 .body_container h1 {
 	position: absolute;
+	float: left;
+	z-index: 2;
+	color: #00B0F0;
+	top: 70px;
+	left: 260px;
+	width: 600px;
+	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
+	font-style: normal;
+	text-align: left;
+	font-size: 320%;
+}
+.body_container h2 {
+	position: absolute;
+	float: left;
+	z-index: 2;
+	color: #00B0F0;
+	top: 150px;
+	left: 260px;
+	width: 600px;
+	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
+	font-style: normal;
+	text-align: left;
+	font-size: 180%;
+}
+.body_container h3 {
+	position: absolute;
 	float: right;
 	z-index: 2;
 	color: #00B0F0;
-	bottom: 80px;
+	bottom: 20px;
 	right: 50px;
 	width: 300px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: right;
-	font-size: 320%;
-}
-.body_container h2 {
-	position: absolute;
-	float: right;
-	z-index: 2;
-	color: #00B0F0;
-	bottom: 45px;
-	right: 50px;
-	width: 600px;
-	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
-	font-style: normal;
-	text-align: right;
-	font-size: 180%;
+	font-size: 260%;
 }
 .body_container p {
 	position: absolute;
 	float: right;
 	z-index: 2;
 	color: #929292;
-	bottom: 10px;
+	bottom: 16px;
 	right: 50px;
-	width: 300px;
+	width: 500px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: right;
 	font-size: 100%;
+}
+
+.navigator_text {
+	font-family: Arial, Gotham, "Helvetica Neue", Helvetica, sans-serif;
+	height: 20px;
+	width: 168px;
+	border-width: 2px;
+	border-style: solid none none;
+	position: relative;
+	line-height: 30px;
+	padding-left: 10px;
+	margin-left: 10px;
+	margin-right: 0px;
+	border-color: #33CCFF;
+	color: #FFFFFF;
+}
+.navigator_blank {
+	width: 200px;
+	height: 63px;
+}
+.main_navigator h1 {
+	font-size: 20px;
+	font-family: Arial, Gotham, "Helvetica Neue", Helvetica, sans-serif;
+	height: 26px;
+	width: 168px;
+	border-width: 2px;
+	border-style: solid none none;
+	position: relative;
+	line-height: 34px;
+	padding-left: 10px;
+	margin-left: 10px;
+	margin-right: 0px;
+	border-color: #33CCFF;
+	color: #FFFFFF;
+	font-weight: bold;
 }
