--- a/style/main.css
+++ b/style/main.css
@@ -167,7 +167,7 @@
 	position: absolute;
 	float: right;
 	z-index: 2;
-	color: #00B0F0;
+	color: #929292;
 	bottom: 20px;
 	right: 50px;
 	width: 300px;
