--- a/style/main.css
+++ b/style/main.css
@@ -73,7 +73,7 @@
 	height: 100%;
 	z-index: 0;
 	padding-left: 200px;
-	top: -10px;
+	top: 0px;
 	left: 0px;
 	position: absolute;
 }
@@ -92,6 +92,12 @@
 }
 /* Animation Times - Time for image to fade in
 ---------------------------------------------------- */
+.fadeIn-20ms {
+        -webkit-animation-duration:0.2s;
+        -moz-animation-duration:0.2s;
+        -o-animation-duration:0.2s;
+        animation-duration:0.2s;
+}
 .fadeIn-50ms {
         -webkit-animation-duration:0.5s;
         -moz-animation-duration:0.5s;
@@ -112,6 +118,12 @@
 }
 /* Animation Delay - Time for image to be delayed
 ---------------------------------------------------- */
+.fadeIn-Delay-20ms {
+        -webkit-animation-delay:0.2s;
+        -moz-animation-delay:0.2s;
+        -o-animation-delay:0.2s;
+        animation-delay:0.2s;
+}
 .fadeIn-Delay-50ms {
         -webkit-animation-delay:0.5s;
         -moz-animation-delay:0.5s;
@@ -142,9 +154,9 @@
 	float: left;
 	z-index: 2;
 	color: #00B0F0;
-	top: 70px;
-	left: 260px;
-	width: 600px;
+	top: 40px;
+	left: 250px;
+	width: 1000px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: left;
@@ -155,20 +167,20 @@
 	float: left;
 	z-index: 2;
 	color: #00B0F0;
-	top: 150px;
-	left: 260px;
-	width: 600px;
+	top: 120px;
+	left: 250px;
+	width: 1000px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: left;
-	font-size: 180%;
+	font-size: 160%;
 }
-.body_container h3 {
+.body_container h4 {
 	position: absolute;
 	float: right;
 	z-index: 2;
-	color: #929292;
-	bottom: 20px;
+	color: #BBBBBB;
+	bottom: 0px;
 	right: 50px;
 	width: 300px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
@@ -191,7 +203,7 @@
 }
 .navigator_blank {
 	width: 200px;
-	height: 54px;
+	height: 40px;
 }
 .main_navigator_h1 {
 	font-size: 20px;
@@ -215,9 +227,35 @@
 	transition: all 0.2s linear 0s;
 	z-index: 3;
 }
+.main_navigator_h1_selected {
+	font-size: 20px;
+	font-family: Arial, Gotham, "Helvetica Neue", Helvetica, sans-serif;
+	height: 26px;
+	width: 168px;
+	border-width: 2px;
+	border-style: solid none none;
+	position: relative;
+	line-height: 34px;
+	padding-left: 0px;
+	padding-bottom: 7px;
+	margin-top: 30px;
+	margin-left: 10px;
+	margin-right: 0px;
+	border-color: #33CCFF;
+	color: #FFBB28;
+	font-weight: bold;
+	-webkit-transition: all 0.2s linear 0s;
+	-o-transition: all 0.2s linear 0s;
+	transition: all 0.2s linear 0s;
+	z-index: 3;
+}
 .main_navigator_h1 a {
 	text-decoration: none;
 	color: #FFFFFF;
+}
+.main_navigator_h1_selected a {
+	text-decoration: none;
+	color: #FFBB28;
 }
 .main_navigator_h2 {
 	font-size: 18px;
@@ -234,14 +272,33 @@
 	font-weight: normal;
 	z-index: 3;
 }
+.main_navigator_h2_selected {
+	font-size: 18px;
+	font-family: Arial, Gotham, "Helvetica Neue", Helvetica, sans-serif;
+	height: 28px;
+	width: 148px;
+	position: relative;
+	line-height: 24px;
+	padding-left: 7px;
+	margin-left: 20px;
+	margin-right: 0px;
+	border-color: #33CCFF;
+	color: #FFBB28;
+	font-weight: normal;
+	z-index: 3;
+}
 .main_navigator_h2 a {
 	text-decoration: none;
 	color: #FFFFFF;
 }
+.main_navigator_h2_selected a {
+	text-decoration: none;
+	color: #FFBB28;
+}
 .gausian_logo {
-	width: 200px;
-	bottom: 10px;
-	left: 0px;
+	width: 70px;
+	bottom: 18px;
+	left: 65px;
 	float: left;
 	position: absolute;
 }
