--- a/style/main.css
+++ b/style/main.css
@@ -4,16 +4,22 @@
 .main_navigator {
 	background-color: #00B0F0;
 	float: left;
-	height: 100%;
 	width: 200px;
 	position: absolute;
 	left: 0px;
 	top: 0px;
+	bottom: 0px;
+	padding-top: 0px;
+	padding-bottom: 0px;
 	-webkit-transition: all;
 	-o-transition: all;
 	transition: all;
 	z-index: 0;
-	padding-top: 0px;
+	background-size: contain;
+	background-repeat: repeat-y;
+	overflow-x: auto;
+	overflow-y: auto;
+	clear: left;
 }
 .top_bar {
 	background-color: #000000;
@@ -70,12 +76,12 @@
 	color: #D9680D;
 }
 .body_container {
-	height: 100%;
-	z-index: 0;
-	padding-left: 200px;
-	top: 0px;
-	left: 0px;
 	position: absolute;
+	z-index: 0;
+	top: 0px;
+	left: 200px;
+	right: 0px;
+	bottom: 0px;
 }
 .fadeIn {
         /* CSS needed for animation
@@ -150,56 +156,90 @@
 @keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
 
 .body_container h1 {
-	position: absolute;
+	position: relative;
 	float: left;
 	z-index: 2;
 	color: #00B0F0;
-	top: 40px;
-	left: 250px;
-	width: 1000px;
+	right: 0px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: left;
 	font-size: 320%;
+	left: 50px;
+	top: 35px;
+	right: 0px;
+	clear: left;
+	padding-bottom: 0px;
 }
 .body_container h2 {
-	position: absolute;
+	position: relative;
 	float: left;
 	z-index: 2;
 	color: #00B0F0;
-	top: 120px;
-	left: 250px;
-	width: 1000px;
+	right: 0px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: left;
-	font-size: 160%;
+	font-size: 140%;
+	left: 50px;
+	top: -8px;
+	right: 0px;
+	clear: left;
+	height: 0px;
 }
 .body_container h4 {
 	position: absolute;
 	float: right;
 	z-index: 2;
 	color: #BBBBBB;
-	bottom: 0px;
+	bottom: 10px;
 	right: 50px;
 	width: 300px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: right;
-	font-size: 260%;
+	font-size: 230%;
 }
-.body_container p {
+.body_container h5 {
 	position: absolute;
 	float: right;
 	z-index: 2;
-	color: #929292;
-	bottom: 16px;
+	color: #999999;
+	bottom: 5px;
 	right: 50px;
 	width: 500px;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: right;
 	font-size: 100%;
+}
+.body_container p {
+	position: relative;
+	float: left;
+	z-index: 2;
+	color: #C0C0C0;
+	right: 0px;
+	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
+	font-style: normal;
+	text-align: left;
+	font-size: 110%;
+	left: 0px;
+	top: -8px;
+	right: 0px;
+	clear: left;
+	line-height: 140%;
+	padding-left: 50px;
+	padding-right: 50px;
+}
+.full_container_img{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+	bottom: 0px;
+	right: 0px;
+	float: left;
 }
 .navigator_blank {
 	width: 200px;
