--- a/style/main.css
+++ b/style/main.css
@@ -211,7 +211,7 @@
 	top: 0px;
 	right: 0px;
 	clear: left;
-	padding-bottom: 0px;
+	padding-bottom: 10px;
 }
 .body_container h2 {
 	position: relative;
@@ -222,12 +222,13 @@
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: left;
-	font-size: 3.3vh;
+	font-size: 3vh;
 	left: 50px;
 	top: -47px;
 	right: 0px;
 	clear: left;
 	height: 0px;
+	padding-top: 0vh;
 }
 .body_container_h2 {
 	position: relative;
@@ -937,4 +938,189 @@ text-decoration: none;
 }
 .nodec:hover; {
 text-decoration: none;
+}
+.all_service_exchanger {
+position: absolute;
+left: 60%;
+top: 65%;
+height: 18vh;
+width: 18vh;
+border-radius: 20vh;
+border-style: solid;
+border-width: 3vh;
+background: rgb(50, 50, 50);
+border-color: rgb(51, 176, 240);
+transform: translateX(-50%);
+font-family: arial;
+font-size: 2vh;
+text-align: center;
+}
+.all_service_exchanger:hover {
+cursor: pointer;
+box-shadow: 0 0 15px white;
+}
+.all_service_exchanger_text {
+position: absolute;
+left: 54.2%;
+top: 72%;
+height: 18vh;
+width: 18vh;
+font-family: arial;
+font-size: 3vh;
+text-align: center;
+color: white;
+}
+.all_service_essential_1 {
+position: absolute;
+left: 52.2%;
+top: 51%;
+height: 6vh;
+width: 6vh;
+border-radius: 8vh;
+border-style: solid;
+border-width: 1vh;
+background: rgb(50, 50, 50);
+border-color: #65cbfe;
+transform: translateX(-50%);
+font-family: arial;
+font-size: 4vh;
+text-align: center;
+line-height: 6vh;
+color: #65cbfe;
+}
+.all_service_essential_1:hover {
+cursor: pointer;
+box-shadow: 0 0 15px white;
+}
+.all_service_essential_2 {
+position: absolute;
+left: 68%;
+top: 47%;
+height: 7vh;
+width: 7vh;
+border-radius: 8vh;
+border-style: solid;
+border-width: 1.2vh;
+background: rgb(50, 50, 50);
+border-color: #65cbfe;
+transform: translateX(-50%);
+font-family: arial;
+font-size: 5vh;
+text-align: center;
+line-height: 7.2vh;
+color: #65cbfe;
+}
+.all_service_essential_2:hover {
+cursor: pointer;
+box-shadow: 0 0 15px white;
+}
+.all_service_essential_3 {
+position: absolute;
+left: 82%;
+top: 61%;
+height: 6vh;
+width: 6vh;
+border-radius: 8vh;
+border-style: solid;
+border-width: 1vh;
+background: rgb(50, 50, 50);
+border-color: #65cbfe;
+transform: translateX(-50%);
+font-family: arial;
+font-size: 4vh;
+text-align: center;
+line-height: 6vh;
+color: #65cbfe;
+}
+.all_service_essential_3:hover {
+cursor: pointer;
+box-shadow: 0 0 15px white;
+}
+.all_service_essential_4 {
+position: absolute;
+left: 40%;
+top: 61%;
+height: 5vh;
+width: 5vh;
+border-radius: 8vh;
+border-style: solid;
+border-width: 1vh;
+background: rgb(50, 50, 50);
+border-color: #65cbfe;
+transform: translateX(-50%);
+font-family: arial;
+font-size: 3vh;
+text-align: center;
+line-height: 5vh;
+color: #65cbfe;
+}
+.all_service_essential_4:hover {
+cursor: pointer;
+box-shadow: 0 0 15px white;
+}
+.all_service_developer_1 {
+position: absolute;
+left: 59.9%;
+top: 23%;
+height: 7vh;
+width: 7vh;
+border-radius: 8vh;
+border-style: solid;
+border-width: 1.3vh;
+background: rgb(50,50,50);
+border-color: #FFBB28;
+transform: translateX(-50%);
+font-family: arial;
+font-size: 4.4vh;
+text-align: center;
+line-height: 7.2vh;
+color: #FFBB28;
+}
+.all_service_developer_1:hover {
+cursor: pointer;
+box-shadow: 0 0 15px white;
+}
+.all_service_developer_2 {
+position: absolute;
+left: 41%;
+top: 46%;
+height: 5vh;
+width: 5vh;
+border-radius: 8vh;
+border-style: solid;
+border-width: 1vh;
+background: rgb(50,50,50);
+border-color: #FFBB28;
+transform: translateX(-50%);
+font-family: arial;
+font-size: 3.3vh;
+text-align: center;
+line-height: 5vh;
+color: #FFBB28;
+}
+.all_service_developer_2:hover {
+cursor: pointer;
+box-shadow: 0 0 15px white;
+}
+.all_service_developer_3 {
+position: absolute;
+left: 79%;
+top: 43%;
+height: 6vh;
+width: 6vh;
+border-radius: 8vh;
+border-style: solid;
+border-width: 1vh;
+background: rgb(50,50,50);
+border-color: #FFBB28;
+transform: translateX(-50%);
+font-family: arial;
+font-size: 4vh;
+text-align: center;
+line-height: 6vh;
+color: #FFBB28;
+}
+.all_service_developer_3:hover {
+cursor: pointer;
+box-shadow: 0 0 15px white;
 }
