--- a/style/main.css
+++ b/style/main.css
@@ -305,7 +305,7 @@ position: absolute;
 	font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
 	font-style: normal;
 	text-align: left;
-	font-size: 2.2vh;
+	font-size: 2.3vh;
 	left: 0px;
 	top: -44px;
 	right: 0px;
@@ -322,6 +322,16 @@ position: absolute;
 	width: 100%;
 	height: 100%;
 	left: 0px;
+	top: 0px;
+	bottom: 0px;
+	right: 0px;
+	float: left;
+}
+.full_container_img_special{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	left: 5%;
 	top: 0px;
 	bottom: 0px;
 	right: 0px;
@@ -1072,7 +1082,7 @@ box-shadow: 0 0 15px white;
 }
 .all_service_developer_1 {
 position: absolute;
-left: 59.9%;
+left: 64.9%;
 top: 28%;
 height: 7vh;
 width: 7vh;
