--- a/style/main.css
+++ b/style/main.css
@@ -30,7 +30,7 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#5db9dd',GradientType=0 );
 }
 .top_bar {
-	background-color: #000000;
+	background-color: rgba(0,0,0,0.5);
 	height: 46px;
 	width: 100%;
 	position: absolute;
