--- a/style/main.css
+++ b/style/main.css
@@ -54,6 +54,22 @@
   font-size: 140%;
   text-decoration: none;
 }
+.ASA_Header_short {
+  font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
+  font-weight: bold;
+  color: #FFBB28;
+  height: 46px;
+  width: 200px;
+  position: absolute;
+  z-index: 2;
+  text-align: center;
+  left: 17px;
+  top: 0px;
+  line-height: 46px;
+  padding-top: 0%;
+  font-size: 140%;
+  text-decoration: none;
+}
 .ASA_Header_homepage {
   font-family: Arial, "Gill Sans", "Gill Sans MT", "Myriad Pro", "DejaVu Sans Condensed", Helvetica, sans-serif;
   font-weight: bold;
@@ -119,6 +135,17 @@
 	position: absolute;
 	z-index: 0;
 	top: 46px;
+	left: 200px;
+	right: 0px;
+	bottom: 0px;
+	overflow-y: hidden;
+	min-width: 1000px;
+	min-height: 650px;
+}
+.body_container_no_bar {
+	position: absolute;
+	z-index: 0;
+	top: 0px;
 	left: 200px;
 	right: 0px;
 	bottom: 0px;
