--- a/style/main.css
+++ b/style/main.css
@@ -20,14 +20,15 @@
 	overflow-y: auto;
 	clear: left;
 	min-height: 696px;
-	 background: #23538a;
-  background: -moz-linear-gradient(top, #23538a 0%, #5db9dd 100%);
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#23538a), color-stop(100%,#5db9dd));
-  background: -webkit-linear-gradient(top, #23538a 0%,#5db9dd 100%);
-  background: -o-linear-gradient(top, #23538a 0%,#5db9dd 100%);
-  background: -ms-linear-gradient(top, #23538a 0%,#5db9dd 100%);
-  background: linear-gradient(to bottom, #23538a 0%,#5db9dd 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#23538a', endColorstr='#5db9dd',GradientType=0 );
+background: rgb(32,124,229); /* Old browsers */
+background: -moz-linear-gradient(top,  rgba(32,124,229,1) 0%, rgba(113,174,232,1) 100%); /* FF3.6+ */
+background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(32,124,229,1)), color-stop(100%,rgba(113,174,232,1))); /* Chrome,Safari4+ */
+background: -webkit-linear-gradient(top,  rgba(32,124,229,1) 0%,rgba(113,174,232,1) 100%); /* Chrome10+,Safari5.1+ */
+background: -o-linear-gradient(top,  rgba(32,124,229,1) 0%,rgba(113,174,232,1) 100%); /* Opera 11.10+ */
+background: -ms-linear-gradient(top,  rgba(32,124,229,1) 0%,rgba(113,174,232,1) 100%); /* IE10+ */
+background: linear-gradient(to bottom,  rgba(32,124,229,1) 0%,rgba(113,174,232,1) 100%); /* W3C */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#207ce5', endColorstr='#71aee8',GradientType=0 ); /* IE6-9 */
+
 }
 .top_bar {
 background: -moz-linear-gradient(left,  rgba(0,0,0,0) 0%, rgba(0,0,0,0.65) 100%); /* FF3.6+ */
